--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +22,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Primary Meta Tags -->
+    <title>Weather Advisor</title>
+    <meta name="title" content="Weather Advisor">
+    <meta name="description" content="Plan your best vacation ever!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pv278-weather-advisor.surge.sh/">
+    <meta property="og:title" content="Weather Advisor">
+    <meta property="og:description" content="Plan your best vacation ever!">
+<!--    TODO add preview image -->
+<!--    <meta property="og:image" content="https://pv278-weather-advisor.surge.sh/preview.png">-->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pv278-weather-advisor.surge.sh/">
+    <meta property="twitter:title" content="Weather Advisor">
+    <meta property="twitter:description" content="Plan your best vacation ever!">
+    <!--    TODO add preview image -->
+<!--    <meta property="twitter:image" content="https://pv278-weather-advisor.surge.sh/preview.png">-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
