Add social media preview image; Revise stat ranges and activities

--- a/public/index.html
+++ b/public/index.html
@@ -25,23 +25,21 @@
     <!-- Primary Meta Tags -->
     <title>Weather Advisor</title>
     <meta name="title" content="Weather Advisor">
-    <meta name="description" content="Plan your best vacation ever!">
+    <meta name="description" content="Plan the vacation of your dreams!">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pv278-weather-advisor.surge.sh/">
     <meta property="og:title" content="Weather Advisor">
-    <meta property="og:description" content="Plan your best vacation ever!">
-<!--    TODO add preview image -->
-<!--    <meta property="og:image" content="https://pv278-weather-advisor.surge.sh/preview.png">-->
+    <meta property="og:description" content="Plan the vacation of your dreams!">
+    <meta property="og:image" content="https://pv278-weather-advisor.surge.sh/social_media_preview.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://pv278-weather-advisor.surge.sh/">
     <meta property="twitter:title" content="Weather Advisor">
-    <meta property="twitter:description" content="Plan your best vacation ever!">
-    <!--    TODO add preview image -->
-<!--    <meta property="twitter:image" content="https://pv278-weather-advisor.surge.sh/preview.png">-->
+    <meta property="twitter:description" content="Plan the vacation of your dreams!">
+    <meta property="twitter:image" content="https://pv278-weather-advisor.surge.sh/social_media_preview.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
